# friendstube

./: friendstube.code-workspace  package.json  pnpm-lock.yaml
friendstube-main-site/: package.json  pnpm-lock.yaml  tailwind.config.ts
friendstube-main-site/prisma/: schema.prisma
friendstube-main-site/prisma/migrations/20230830015739_init/: migration.sql
friendstube-main-site/src/app/: layout.tsx  page.tsx  providers.tsx
friendstube-main-site/src/app/room/[id]/: page.tsx
friendstube-main-site/src/components/client/: button.tsx  room-form-buttons.tsx  room-play-form.tsx
friendstube-main-site/src/components/client/players/: hosting-video-player.tsx  video-player.tsx  watching-video-player.tsx
friendstube-main-site/src/lib/: redis.ts
friendstube-main-site/src/lib/models/: forms.ts  room.ts
friendstube-main-site/src/lib/server-actions/: room.ts
friendstube-streaming-helper/: Cargo.toml  Dockerfile  fly.toml
friendstube-streaming-helper/src/: main.rs  models.rs
