[package]
name = "streaming-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.9.0"
async-stream = "0.3.5"
axum = "0.6.20"
color-eyre = "0.6.2"
futures = "0.3.28"
lazy_static = "1.4.0"
redis = { version = "0.23.2", features = ["tokio-comp"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.3", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
